added the style

--- a/Project.html
+++ b/Project.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>food Haven</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    
+    <div>
+        <h1>Welcome to Food Haven</h1>
+        <p>At Food Haven, we believe that good food brings people together. Whether you're craving comfort classics or bold, adventurous flavors, our menu is crafted to satisfy every appetite. Experience quality ingredients, mouth-watering meals, and exceptional service — all in one place.</p>
+    </div>
 </body>
 </html>
