--- a/Project.html
+++ b/Project.html
@@ -3,13 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>food Haven</title>
     <link rel="stylesheet" href="style/style.css">
+    <link rel="shortcut icon" href="image/favicon.png" type="image/x-icon">
+    <title>Food Haven</title>
 </head>
-<body>
-    <div>
-        <h1>Welcome to Food Haven</h1>
-        <p>At Food Haven, we believe that good food brings people together. Whether you're craving comfort classics or bold, adventurous flavors, our menu is crafted to satisfy every appetite. Experience quality ingredients, mouth-watering meals, and exceptional service — all in one place.</p>
+<body class="padding">
+    <div class="banner">
+        <h1 class="food">Welcome to Food Haven</h1>
+        <p class="description">At Food Haven, we believe that good food brings people together. Whether you're craving comfort classics <br> or bold, adventurous flavors, our menu is crafted to satisfy every appetite. Experience quality ingredients, <br>mouth-watering meals, and exceptional service — all in one place.</p>
+        <button class="btn">Buy now</button>
+    </div>
+    <div class="background ">
+        <div class="items">
+            <h1>Food Haven Menu Items</h1>
+            <ul class="items">
+                <li>Crispy Mozzarella Sticks</li>
+                <li>Garlic Butter Prawns</li>
+                <li>Spicy Chicken Wings</li>
+                <li>Loaded Nachos with Cheese</li>
+                <li>Veggie Spring Rolls</li>
+            </ul>
+        </div>
+        <div class="image">
+            <img class="border" width="350px" height="300px" src="image/pasta.jpg" alt="">
+            <img class="border" width="350px" height="300px" src="image/pizza.jpg" alt="">
+            
+        </div>
+
     </div>
 </body>
 </html>
