--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
     <title>Food Haven</title>
 </head>
 <body class="padding">
-    <div class="banner">
+    <header>
+        <nav>
+
+        </nav>
+        <div class="banner">
         <h1 class="food">Welcome to Food Haven</h1>
         <p class="description">At Food Haven, we believe that good food brings people together. Whether you're craving comfort classics <br> or bold, adventurous flavors, our menu is crafted to satisfy every appetite. Experience quality ingredients, <br>mouth-watering meals, and exceptional service — all in one place.</p>
         <button class="btn">Buy now</button>
     </div>
-    <div class="background ">
+    </header>
+   <main>
+     <div class="background ">
         <div class="items">
             <h1>Food Haven Menu Items</h1>
             <ul class="items">
@@ -31,5 +37,10 @@
         </div>
 
     </div>
+    <section class="video-content" >
+        <video class="video-section" width="800px" height="500px" controls src="media/cooke.mp4"></video>
+        <h1 class="food-title">Food Decoration Video</h1>
+    </section>
+   </main>
 </body>
 </html>
