my is the last commit

--- a/index.html
+++ b/index.html
@@ -9,12 +9,23 @@
 </head>
 <body class="padding">
     <header>
-        <nav>
-
+        <nav class="nav-bar open-sans-font">
+            <div class="logo">
+                <img width="100px" height="100px" src="image/Capture-removebg-preview.png" alt="">
+                <h1 class="logo-title ">Food Have</h1>
+            </div>
+            <div class="menu">
+                <ul class="list">
+                    <li><a href="a-lists">Home</a></li>
+                    <li><a href="a-lists">Foods</a></li>
+                    <li><a href="a-lists">Contract</a></li>
+                    <li><a href="a-lists">About us</a></li>
+                </ul>
+            </div>
         </nav>
-        <div class="banner">
+        <div class="banner ">
         <h1 class="food">Welcome to Food Haven</h1>
-        <p class="description">At Food Haven, we believe that good food brings people together. Whether you're craving comfort classics <br> or bold, adventurous flavors, our menu is crafted to satisfy every appetite. Experience quality ingredients, <br>mouth-watering meals, and exceptional service — all in one place.</p>
+        <p class="description open-sans-font">At Food Haven, we believe that good food brings people together. Whether you're craving comfort classics <br> or bold, adventurous flavors, our menu is crafted to satisfy every appetite. Experience quality ingredients, <br>mouth-watering meals, and exceptional service — all in one place.</p>
         <button class="btn">Buy now</button>
     </div>
     </header>
@@ -38,7 +49,7 @@
 
     </div>
     <section class="video-content" >
-        <video class="video-section" width="800px" height="500px" controls src="media/cooke.mp4"></video>
+        <video class="video-section" width="900px" height="600px" controls src="media/cooke.mp4"></video>
         <h1 class="food-title">Food Decoration Video</h1>
     </section>
    </main>
